now points are linked and can be deleted - not in the best way though

--- a/projetin.html
+++ b/projetin.html
@@ -3,5 +3,6 @@
     <canvas id="canvas" width="700" height="500" style="background: white; margin-top: 10%;" >
     </canvas>
 </body>
+<input type="checkbox" id="defaultMode">
 
 <script src="./projetin.js"></script>
