now we can select curves - and make them pink!

--- a/projetin.html
+++ b/projetin.html
@@ -8,8 +8,8 @@
 <input type="number" id="avalNumber" min="0" max="500" value = 15>
 <input type="button" id="createNewCurve" value="Create a new curve!" onclick="createNewCurve()">
 
-<input type="button" id="prevCurve" value="<">
-<input type="button" id="nextCurve" value=">">
+<input type="button" id="prevCurve" value="<" onclick="selectPrevCurve()">
+<input type="button" id="nextCurve" value=">" onclick = "selectNextCurve()">
 <input type="button" id="deleteCurve" value="Delete this curve!">
 
 <br>
