--- a/projetin.html
+++ b/projetin.html
@@ -1,28 +1,34 @@
-<head>
-    <link rel="stylesheet" type="text/css" href="projetin.css" media="screen"/>
-
-</head>
-
-<body style = "background : #E8FF82; text-align: center">
+<div class="canvasrea">
+<body>
     <canvas id="canvas" width="900" height="500" style="background: white; margin-top: 7%;" >
     </canvas>
 </body>
+</div>
 <br>
 <br>
-<input type="number" id="avalNumber" min="0" max="500" value = 15>
-<input type="button" id="createNewCurve" value="Create a new curve!" onclick="createNewCurve()">
 
-<input type="button" id="prevCurve" value="<" onclick="selectPrevCurve()">
-<input type="button" id="nextCurve" value=">" onclick ="selectNextCurve()">
-<input type="button" id="deleteCurve" value="Delete this curve!" onclick ="deleteSelectedCurve()">
+<div class="commandsPt1">
+<input type="number" class="avalNumber" id="avalNumber" min="0" max="00" value = 15>
+<input type="button" class="b_deleIns" id="createNewCurve" value="Create a new curve!" onclick="createNewCurve()">
 
-<br>
-<label><input type="checkbox" id="showCurves" onclick="redrawInCanvas()"> Show Curves </label>
-<label><input type="checkbox" id="showPolyg" onclick="redrawInCanvas()"> Show polygones</label>
-<label><input type="checkbox" id="showControlPoints" onclick = "redrawInCanvas()"> Show Control Points</label> 
+<input type="button" class="b_prevNext" id="prevCurve" value="<" onclick="selectPrevCurve()">
+<input type="button" class="b_prevNext" id="nextCurve" value=">" onclick ="selectNextCurve()">
+<input type="button" class="b_deleIns" id="deleteCurve" value="Delete this curve!" onclick ="deleteSelectedCurve()">
+</div>
 
+<div class="commandsPt2">
 <br>
-<label class="defaultModeCheckbox"><input type="checkbox" id="defaultMode" value="Default Mode" checked> Default Mode </label>
-<input type="button" id="addPointsToSelectedCurve" value="Add Points to Selected Curve!" onclick="addPendingPointsToSelectedCurve()">
+<label class="c_show"><input type="checkbox" id="showCurves" onclick="redrawInCanvas()"> Show Curves </label>
+<label class="c_show"><input type="checkbox" id="showPolyg" onclick="redrawInCanvas()"> Show polygones</label>
+<label class="c_show"><input type="checkbox" id="showControlPoints" onclick = "redrawInCanvas()"> Show Control Points</label> 
+</div>
+<br>
+
+<div class="commandsPt3">
+<label class="c_defaultMode"><input type="checkbox" id="defaultMode" value="Default Mode" checked> Default Mode </label>
+<input type="button" class="b_addPts" id="addPointsToSelectedCurve" value="Add Points to selected Curve!" onclick="addPendingPointsToSelectedCurve()">
+</div>
+
 
 <script src="./projetin.js"></script>
+<link rel="stylesheet" type="text/css" href="projetin.css" media="screen"/>
