transform mode is done!

--- a/projetin.html
+++ b/projetin.html
@@ -7,7 +7,7 @@
 
 <div class="columnRight">
     <body>
-        <canvas id="canvas" width="900" height="500" style="background: white;" >
+        <canvas id="canvas" width="900" height="500">
         </canvas>
     </body>
 
@@ -21,9 +21,9 @@
     <br>  
 
     <div class="showCheckboxes">
-        <label class="c_show"><input type="checkbox" id="showCurves" onclick="redrawInCanvas()"> Show Curves </label>   
-        <label class="c_show"><input type="checkbox" id="showPolyg" onclick="redrawInCanvas()"> Show polygones</label>
-        <label class="c_show"><input type="checkbox" id="showControlPoints" onclick = "redrawInCanvas()"> Show Control Points</label> 
+        <label class="c_show"><input type="checkbox" id="showCurves" onclick="redrawInCanvas()" checked> Show Curves </label>   
+        <label class="c_show"><input type="checkbox" id="showPolyg" onclick="redrawInCanvas()" checked> Show polygones</label>
+        <label class="c_show"><input type="checkbox" id="showControlPoints" onclick = "redrawInCanvas()" checked> Show Control Points</label> 
     </div>
 
     <br>
