--- a/projetin.html
+++ b/projetin.html
@@ -29,7 +29,7 @@
     <br>
 
     <div id="defaultModeElements">
-        <input type="number" id="avalNumber" min="0" max="00" value = 15>
+        <input type="number" class="avalNumber" id="avalNumber" value = 15>
         <input type="button" class="b_actionToCurve" id="createNewCurve" value="Create a new curve!" onclick="createNewCurve()">
     </div>
 
@@ -39,6 +39,7 @@
                 <input type="button" class="b_prevNext" id="prevCurve" value="<" onclick="selectPrevCurve()">
                 <input type="button" class="b_prevNext" id="nextCurve" value=">" onclick ="selectNextCurve()">
         </div>
+
         <br>
         <label class="c_other"><input type="checkbox" id="c_transformMode" checked onclick="changeTransformMode()"> Transform Mode </label>
         <br>
@@ -46,6 +47,10 @@
         <div id="notTransformModeButtons">
             <input type="button" class="b_actionToCurve" id="deleteCurve" value="Delete curve" onclick ="deleteSelectedCurve()">
             <input type="button" class="b_actionToCurve" id="addPointsToSelectedCurve" value="Add Points" onclick="addPendingPointsToSelectedCurve()">
+            <br>
+            <br>
+            <input type="number" class="avalNumber" id ="toChangeAvalNumber">
+            <input type="button" class="b_actionToCurve" id="b_changeAvalNumber" value="Change avaliation" onclick="changeAvaliationNumber()">
         </div>
     </div>
 
