--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <br>
 
     <div id="defaultModeElements">
-        <input type="number" class="avalNumber" id="avalNumber" value = 15>
+        <input type="number" class="avalNumber" id="avalNumber" value = 50>
         <input type="button" class="b_actionToCurve" id="createNewCurve" value="Create a new curve!" onclick="createNewCurve()">
     </div>
 
@@ -49,7 +49,7 @@
             <br>
             <br>
             <input type="number" class="avalNumber" id ="toChangeAvalNumber">
-            <input type="button" class="b_actionToCurve" id="b_changeAvalNumber" value="Change avaliation" onclick="changeAvaliationNumber()">
+            <input type="button" class="b_actionToCurve" id="b_changeAvalNumber" value="Change avaliation" onclick="changeEvaluationNumber()">
         </div>
     </div>
 
